# BOTBINANCE

./: .env.example  .gitignore  Dockerfile.core  PRD.MD  README.md  TASKS.MD  docker-compose.yml  render.yaml  rules.md
.github/workflows/: ci-python.yml  ci-rust.yml  ci-web.yml  deploy-ai.yml  deploy-core.yml  deploy-web.yml
ai/: Dockerfile  config.py  main.py  pyproject.toml  ruff.toml
ai/database/: supabase_client.py
ai/models/: requests.py  responses.py
ai/routers/: trading.py
ai/services/: encryption.py  llm_service.py  mistake_analyzer.py  rag_service.py
ai/tests/: test_api.py  test_llm_service.py  test_mistake_analyzer.py  test_rag_service.py
core/: Cargo.toml
core/src/: config.rs  error.rs  main.rs
core/src/ai_client/: mod.rs
core/src/analysis/: elliott.rs  indicators.rs  invalidation_monitor.rs  mod.rs  snd.rs  sync_engine.rs
core/src/api/: error.rs  middleware.rs  mod.rs  state.rs
core/src/api/handlers/: emergency.rs  mod.rs  settings.rs  signals.rs  sse.rs  symbols.rs  trades.rs
core/src/buffer/: mod.rs  rolling.rs
core/src/database/: encryption.rs  mod.rs  models.rs  repository.rs
core/src/execution/: binance_client.rs  mod.rs  order_manager.rs
core/src/risk/: manager.rs  mod.rs
core/src/telegram/: bot.rs  mod.rs  notifier.rs
core/src/websocket/: binance.rs
supabase/: seed.sql
supabase/migrations/: 001_core_tables.sql  002_trading_tables.sql  003_performance_tables.sql  004_rls_policies.sql  005_rag_functions.sql  006_settings_table.sql  007_add_target_equity_settings.sql  008_ai_advanced_config.sql  010_risk_mgmt_settings.sql  011_advanced_trade_tracking.sql
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: providers.tsx  sidebar.tsx  topbar.tsx
web/src/lib/: api.ts  (+1 more)
(+16 files in other folders)
