[project]
name = "botbinance-ai"
version = "0.1.0"
description = "Python AI Service for Binance Trading Bot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "anthropic>=0.18",
    "sentence-transformers>=2.2",
    "chromadb>=0.4",
    "supabase>=2.3",
    "httpx>=0.25",
    "structlog>=24.1",
    "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov"
]
