[package]
name = "botbinance-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "bigdecimal"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "set-header"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
bigdecimal = { version = "0.3", features = ["serde"] }
ta = "0.5" 
teloxide = { version = "0.12", features = ["macros", "rustls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
tokio-stream = "0.1"
aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"
